# boing

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
include/: boink.h  boink_camera.h  boink_math.h  boink_renderer.h  boink_scene.h  boink_script.h  boink_shapes.h  boink_texture.h  boink_window.h
scripts/: scene.lua
src/: boink_renderer.cpp  boink_script.cpp  boink_texture.cpp  boink_window.cpp
